# context-anchor

./: .bandit  .flake8  .gitignore  INSTALL.md  Makefile  README.md  SETUP.md  mypy.ini  pyproject.toml  pytest.ini  reproduce_synthesis.py  requirements-dev.txt  setup.sh  spec.md  test_rich.py
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  getting-started.md  operational-runbook.md  production-readiness-checklist.md  user-onboarding.md
docs/assets/: onboarding-terminal-recording.txt
infrastructure/: .gitignore  README.md  app.py  deploy.sh  requirements-dev.txt  teardown.sh
infrastructure/stacks/: __init__.py  api_gateway_stack.py  budget_stack.py  dynamodb_stack.py  lambda_stack.py  storage_stack.py
infrastructure/tests/: __init__.py  test_api_gateway_stack.py  test_budget_stack.py  test_dynamodb_stack.py  test_lambda_stack.py  test_storage_stack.py
lambda/: capture.py  delete.py  health.py  list.py  purge.py  retrieve.py
src/contextanchor/: __init__.py  agent_core.py  api_client.py  cli.py  config.py  context_store.py  errors.py  git_observer.py  github_integration.py  handlers.py  local_storage.py  logging.py  metrics.py  models.py  privacy.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_e2e_flows.py
tests/performance/: test_benchmarks.py
tests/property/: __init__.py  conftest.py  strategies.py  test_agent_properties.py  test_cli_properties.py  test_cli_restore_properties.py  test_cli_show_properties.py  test_config_properties.py  test_git_properties.py  (+8 more)
(+31 files in other folders)
